--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "bootstrap": "^5.2.2",
+    "classnames": "^2.3.2",
     "next": "latest",
     "react": "17.0.2",
+    "react-bootstrap": "^2.5.0",
     "react-dom": "17.0.2"
   }
 }
