--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@svgr/webpack": "^6.4.0",
     "bootstrap": "^5.2.2",
     "classnames": "^2.3.2",
     "next": "latest",
