--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "next": "latest",
     "react": "17.0.2",
     "react-bootstrap": "^2.5.0",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "sass": "^1.55.0"
   }
 }
