--- a/package.json
+++ b/package.json
@@ -7,12 +7,14 @@
   },
   "dependencies": {
     "@svgr/webpack": "^6.4.0",
+    "animate.css": "^4.1.1",
     "bootstrap": "^5.2.2",
     "classnames": "^2.3.2",
     "next": "latest",
     "react": "17.0.2",
     "react-bootstrap": "^2.5.0",
     "react-dom": "17.0.2",
+    "react-icons": "^4.6.0",
     "sass": "^1.55.0"
   }
 }
