--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.2.2",
     "classnames": "^2.3.2",
     "next": "latest",
+    "next-themes": "^0.2.1",
     "nextjs-fonts": "^0.22.0",
     "react": "17.0.2",
     "react-bootstrap": "^2.5.0",
