--- a/package.json
+++ b/package.json
@@ -12,18 +12,14 @@
     "animate.css": "^4.1.1",
     "bootstrap": "^5.2.2",
     "classnames": "^2.3.2",
-    "eslint-config-next": "^13.3.1",
-    "next": "^13.3.1",
+    "next": "latest",
     "next-themes": "^0.2.1",
     "nextjs-fonts": "^0.22.0",
-    "react": "^18.2.0",
+    "react": "17.0.2",
     "react-bootstrap": "^2.5.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "17.0.2",
     "react-icons": "^4.6.0",
     "sass": "^1.55.0",
-    "vercel": "^29.3.0"
-  },
-  "devDependencies": {
-    "eslint": "^8.38.0"
+    "use-fit-text": "^2.4.0"
   }
 }
