--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,27 +1,39 @@
 # From https://arctype.com/blog/github-vercel/
 # This workflow will do a clean installation of the dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
-
-name: 'Deploy CI'
-
+ 
+name: "Deploy CI"
+ 
 on:
-  release:
-    types:
-      - published
-  push:
-    branches:
-      - main
-  workflow_dispatch:
-
+ release:
+   types:
+     - published
+ push:
+   branches:
+     - main
+ workflow_dispatch:
+ 
 jobs:
-  vercel:
-    runs-on: ubuntu-latest
-    name: 'Deploy application'
+ vercel:
+   runs-on: ubuntu-latest
+   name: "Deploy application"
+  
+   steps:
+     - uses: actions/checkout@v2
+     - uses: actions/setup-node@v1
+       with:
+         node-version: '14'
+         registry-url: https://registry.npmjs.org/
+ 
+     - name: "Deploy application"
+       run: |
+         prodRun=""
+         if [[ ${GITHUB_REF} == "refs/heads/main" ]]; then
+           prodRun="--prod"
+         fi
+ 
+         npx vercel --token ${VERCEL_TOKEN} $prodRun
+       env:
+         VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
 
-    steps:
-- uses: actions/checkout@v3
-- uses: actions/setup-node@v3
-  with:
-    node-version: 18
-- run: npm ci
-- run: npm test
+        #  Does this work??
