--- a/package.json
+++ b/package.json
@@ -8,14 +8,18 @@
   "dependencies": {
     "@fontsource/abhaya-libre": "^4.5.9",
     "@fontsource/italiana": "^4.5.11",
+    "@fontsource/poppins": "^5.0.8",
     "@svgr/webpack": "^6.4.0",
     "animate.css": "^4.1.1",
     "bootstrap": "^5.2.2",
+    "chokidar": "^3.5.3",
     "classnames": "^2.3.2",
     "eslint-config-next": "^13.3.1",
+    "fsevents": "^2.3.3",
     "next": "^13.3.1",
     "next-themes": "^0.2.1",
     "nextjs-fonts": "^0.22.0",
+    "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
