--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,15 +1,6 @@
-// {
-//     "extends": "eslint:recommended",
-//     "parserOptions": {
-//       "ecmaVersion": 12,
-//       "sourceType": "module"
-//     },
-//     "rules": {
-//       // Add your custom rules here
-//     },
-//     "env": {
-//       "browser": true,
-//       "node": true
-//     }
-//   }
-  
+{
+    "extends": "next/core-web-vitals",
+    "rules": {
+        "react/no-unescaped-entities": "off"
+      }
+}
