--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "chokidar": "^3.5.3",
     "classnames": "^2.3.2",
     "eslint-config-next": "^13.3.1",
-    "fsevents": "^2.3.3",
     "next": "^13.3.1",
     "next-themes": "^0.2.1",
     "nextjs-fonts": "^0.22.0",
@@ -29,6 +28,7 @@
     "vercel": "^32.4.1"
   },
   "devDependencies": {
-    "eslint": "^8.38.0"
+    "eslint": "^8.38.0",
+    "fsevents": "^2.3.3"
   }
 }
