--- a/package.json
+++ b/package.json
@@ -28,7 +28,6 @@
     "vercel": "^32.4.1"
   },
   "devDependencies": {
-    "eslint": "^8.38.0",
-    "fsevents": "^2.3.3"
+    "eslint": "^8.38.0"
   }
 }
